[package]
name = "image-drift-tracker"
version = "0.1.0"
edition = "2021"
description = "OS drift tracker for rpm-ostree systems"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1"
blake3 = "1"
clap = { version = "4", features = ["derive"] }
content_inspector = "0.2"
owo-colors = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
similar = "2"
walkdir = "2"
